deployments/k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: pkquyen-micro.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana-svc
            port: 
              number: 3000
